customer-portal-frontend/src/styles-custom.scss
// another spinner that not cover header and sidebar
.blockui {
    .blockui-overlay {
        position: fixed;
    }
}

.card-header-small {
    min-height: 40px !important;
}

// ----- status colors ----- //
.status-pending {
    background-color: #F4C542;
    color: white;
    text-transform: capitalize;
}

.bg-pending {
    background-color: #F4C542 !important;
}

.text-pending {
    color: #F4C542 !important;
}

.status-processing {
    background-color: #d07fef;
    color: white;
    text-transform: capitalize;
}

.bg-processing {
    background-color: #d07fef !important;
}

.text-processing {
    color: #d07fef !important;
}

.status-inprogress {
    background-color: #d07fef;
    color: white;
    text-transform: capitalize;
}

.bg-inprogress {
    background-color: #d07fef !important;
}

.text-inprogress {
    color: #d07fef !important;
}

.status-purchased {
    background-color: #06B6D4;
    color: white;
    text-transform: capitalize;
}

.bg-purchased {
    background-color: #06B6D4 !important;
}

.text-purchased {
    color: #06B6D4 !important;
}

.status-shipped {
    background-color: #3172ff;
    color: white;
    text-transform: capitalize;
}

.bg-shipped {
    background-color: #3172ff !important;
}

.text-shipped {
    color: #3172ff !important;
}

.status-delivered {
    background-color: #0bb74a;
    color: white;
    text-transform: capitalize;
}

.bg-delivered {
    background-color: #0bb74a !important;
}

.text-delivered {
    color: #0bb74a !important;
}

.status-cancelled {
    background-color: #6B7280;
    color: white;
    text-transform: capitalize;
}

.bg-cancelled {
    background-color: #6B7280 !important;
}

.text-cancelled {
    color: #6B7280 !important;
}

.status-error {
    background-color: #EF4444;
    color: white;
    text-transform: capitalize;
}

.bg-error {
    background-color: #EF4444 !important;
}

.text-error {
    color: #EF4444 !important;
}

.status-returned {
    background-color: #A78BFA;
    color: white;
    text-transform: capitalize;
}

.bg-returned {
    background-color: #A78BFA !important;
}

.text-returned {
    color: #A78BFA !important;
}

.status-removed {
    background-color: #9CA3AF;
    color: white;
    text-transform: capitalize;
}

.bg-removed {
    background-color: #9CA3AF !important;
}

.text-removed {
    color: #9CA3AF !important;
}

.status-lost {
    background-color: #ea580c;
    color: white;
    text-transform: capitalize;
}

.bg-lost {
    background-color: #ea580c !important;
}

.text-lost {
    color: #ea580c !important;
}

// ----- status colors - end ----- //

.widget-loader {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

// ----- Syncfusion customization ----- //
.e-multi-select-wrapper {
    height: 40px;
}

// ----- Syncfusion customization - end ----- //

